--- a/app/view/main.html
+++ b/app/view/main.html
@@ -10,10 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/footer.css">
 </head>
 <body>
     <header>
-        <div class="background" style="background-image: url('images/main/main_back.svg'); width: 1307px; height: 808px;"></div>
+        <div class="background" style="background-image: url('/static/images/main/main_back.svg'); width: 1307px; height: 808px;"></div>
         <div class="flex-inf">
             <nav>
                 <button class="header-btn">КОНТАКТЫ</button>
@@ -30,7 +32,7 @@
         </div>
     </header>
     <section class="first-block">
-        <div class="background" style="background-image: url('images/main/first-back.svg'); width: 1307px; height: 1435px;"></div>
+        <div class="background" style="background-image: url('/static/images/main/first-back.svg'); width: 1307px; height: 1435px;"></div>
         <div class="about">
             САЙТ, КОТОРЫЙ ПРЕДОСТАВЛЯЕТ ВАМ ВОЗМОЖНОСТЬ ОЗНАКОМИТЬСЯ С МНОЖЕСТВОМ ЗАДАЧ, ПОПЫТАТЬСЯ РЕШИТЬ ИХ И ПОЗЖЕ ПРИМЕНИТЬ ПРИОБРЕТЕННЫЙ НАВЫК НА ПРАКТИКЕ. СОЗДАН В РАМКАХ ПРОЕКТА
         </div>
@@ -46,14 +48,14 @@
         </div>
         <div class="more_inf">
             <div class="f-right-inf">
-                <img src="/images/main/number-one.svg" alt="">
+                <img src="/static/images/main/number-one.svg" alt="">
                 <div class="text">
                     <p class="main_text">Удобное взаимодействие с информацией. Создав, учетную запись она станет в разы легче.</p>
                     <p class="dependence_text">Заполнение таких категорий: любимое, заметки, отложенное</p>
                 </div>
             </div>
             <div class="right_inf">
-                <img src="/images/main/number-two.svg" alt="">
+                <img src="/static/images/main/number-two.svg" alt="">
                 <div class="text">
                     <p class="main_text">Поиск задач по категориям. Задачи в формате ЕГЭ</p>
                 </div>
@@ -61,7 +63,7 @@
         </div>
     </section>
     <section class="second-block">
-        <div class="background" style="background-image: url('images/main/second-back.svg'); width: 1307px; height: 1351px;"></div>
+        <div class="background" style="background-image: url('/static/images/main/second-back.svg'); width: 1307px; height: 1351px;"></div>
         <div class="rating-task">
             <h3>ТОП-5 ЗАДАЧ</h3>
             <div id="top_of_tasks">
@@ -110,65 +112,6 @@
             <button>ВОЙТИ</button>
         </div>
     </section>
-    <footer>
-        <h3>MINPROGQUE</h3>
-        <div class="flex-a">
-            <a href="" class="foot-link">поддержка</a>
-            <a href="" class="foot-link">контакты</a>
-            <a href="" class="foot-link">правила пользования</a>
-            <a href="" class="foot-link">ресурсы</a>
-            <a href="" class="foot-link">задачи</a>
-        </div>
-    </footer>
-    <section class="feedback">
-        <div class="input_comment">
-            <div class="decorate">
-                Напишите свой комментарии
-                Ваше мнения для нас очень важно
-            </div>
-            <div class="place_for_enter">
-                <textarea id="text-input-area"></textarea>
-                <button id="send">отправить</button>
-            </div>
-        </div>
-        <div class="old-feedback">
-            <h2>КОММЕНТАРИИ</h2>
-            <div class="flex-com">
-                <div>
-                    <p class="name">name_sender</p>
-                    <p class="comment">text_of_comment</p>
-                </div>
-                <div>
-                    <p class="name">name_sender</p>
-                    <p class="comment">text_of_comment</p>
-                </div>
-                <div>
-                    <p class="name">name_sender</p>
-                    <p class="comment">text_of_comment</p>
-                </div>
-                <div>
-                    <p class="name">name_sender</p>
-                    <p class="comment">text_of_comment</p>
-                </div>
-                <div>
-                    <p class="name">name_sender</p>
-                    <p class="comment">text_of_comment</p>
-                </div>
-                <div>
-                    <p class="name">name_sender</p>
-                    <p class="comment">text_of_comment</p>
-                </div>
-                <div>
-                    <p class="name">name_sender</p>
-                    <p class="comment">text_of_comment</p>
-                </div>
-                <div>
-                    <p class="name">name_sender</p>
-                    <p class="comment">text_of_comment</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <link rel="stylesheet" href="/css/main.css">
+    {% extends 'footer.html' %}
 </body>
 </html>
