--- a/app/view/rules.html
+++ b/app/view/rules.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     {% extends 'footer_header.html' %}
-    {% block back_text %}ДОКУМЕНТАЦИЯ{% endblock back_text%}
+    {% block back_text %}ПРАВИЛА САЙТА{% endblock back_text%}
     {% block third_link %}<a href="" class="foot-link">профиль</a>{% endblock third_link %}
     {% block embed %}<embed src="/static/pdf/codeStyle.pdf" type="application/pdf" width="1280px" height="700px">{% endblock embed %}
-    {% block content_1 %}-это раздел сайта, который только для админов, это инструкция по прменению предоставленного функционала{% endblock content_1 %}
-    {% block content_2 %}-этот раздел для самых адыкватных. Будьте ими! Иначе блокировка.{% endblock content_2 %}
+    {% block content_1 %}-это раздел сайта, который посвящен правилам. рекомендуется не совершать действий проиворечащим принципам изложенным ниже, за некоторые из нарушений, вы,  можете получить блокировку вашего аккаунта на данном информационном ресурсе. С уважением администрация сайта MINimal programm Query.{% endblock content_1 %}
+    {% block content_2 %}-читайте все внимательно! Если обнаружили ошибку или несогласны с чем-то пишите в поддержку.{% endblock content_2 %}
     {% block feedback %}{% endblock feedback %}
 </body>
 </html>
