добавлена доп. html и js к данной странице, requiremnts

--- a/app/view/all_tasks.html
+++ b/app/view/all_tasks.html
@@ -128,10 +128,10 @@
         {% block header %}{% endblock header %}
         <header>
             <div class="menubar" id="open_selector_of_task"></div>
-            <a>любимое</a>
-            <h1>MINPROGQUE</h1>
-            <a>поддержка</a>
-            <a href="">профиль</a>
+            <a href="/favorite">любимое</a>
+            <h1 onclick="window.location.href='/'">MINPROGQUE</h1>
+            <a href="/support">поддержка</a>
+            <a href="/profile">профиль</a>
         </header>
         {% block header_style %}{% endblock header_style %}
         <div class="second_flex_elem">
