--- a/app/view/login.html
+++ b/app/view/login.html
@@ -16,9 +16,9 @@
 
 <body>
     <section>
-        <div class="header_of_block" onclick="window.location.href='/'">
+        <div class="header_of_block">
             <h2>MINPROGQUE</h2>
-            <h1>ВХОД</h1>
+            <h1 onclick="window.location.href='/'">ВХОД</h1>
         </div>
         <form action="" id="login_form">
             <input type="text" name="email" placeholder="почта">
