--- a/app/view/profile.html
+++ b/app/view/profile.html
@@ -40,11 +40,11 @@
         </div>
         <div class="footer_block">
             <!-- admin button -->
-            <button>ПОДДЕРЖКА</button>
-            <button><img src="/images/profile/home.svg" alt=""></button>
-            <button><img src="/images/profile/heart.svg" alt=""></button>
+            <button onclick="window.location.href='/support'">ПОДДЕРЖКА</button>
+            <button onclick="window.location.href='/'"><img src="/static/images/profile/home.svg" alt=""></button>
+            <button onclick="window.location.href='/favorite'"><img src="/static/images/profile/heart.svg" alt=""></button>
         </div>
     </section>
-    <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/static/css/profile.css">
 </body>
 </html>
