--- a/app/view/registration.html
+++ b/app/view/registration.html
@@ -15,9 +15,9 @@
     <section>
         <button onclick="window.location.href='/login'" style="background: none; background-image: url('/static//images/registration/exit-btn.svg'); width: 30px; height: 30px; border: none; background-repeat: no-repeat;" class="exit-btn"></button>
         <div class="form_block">
-            <div class="header_of_block" onclick="window.location.href='/'">
+            <div class="header_of_block">
                 <h2>MINPROGQUE</h2>
-                <h1>РЕГИСТРАЦИЯ</h1>
+                <h1 onclick="window.location.href='/'">РЕГИСТРАЦИЯ</h1>
             </div>
             <form action="" id="registration">
                 <div class="input_div">
