--- a/app/view/static/css/profile.css
+++ b/app/view/static/css/profile.css
@@ -75,7 +75,7 @@ h2 {
 }
 
 .background {
-    background-image: url('/images/profile/avatar_frame.svg');
+    background-image: url('/static/images/profile/avatar_frame.svg');
     width: 325px;
     height: 420px;
     position: relative;
@@ -261,4 +261,8 @@ input[type="date"]::-webkit-outer-spin-button {
     text-underline-position: above;
     color: white;
     background-color: rgba(224, 116, 58, 0.409);
+}
+
+button {
+    transition: background-color 3s, color 1s;
 }
