--- a/app/view/error.html
+++ b/app/view/error.html
@@ -16,7 +16,7 @@
         <h1>Кажется что-то ...</h1>
     </div>
     <div class="error_widget">
-        <div class="custom_exit-btn">ВЫХОД</div>
+        <div class="custom_exit-btn" onclick="window.location.href='/'">ВЫХОД</div>
         <div class="place_inf">
             <h3>MinProgQue</h3>
             <p class="message">{{error_message}}</p>
@@ -24,6 +24,6 @@
         </div>
     </div>
     <div class=""></div>
-    <link rel="stylesheet" href="/css/error.css">
+    <link rel="stylesheet" href="/static/css/error.css">
 </body>
 </html>
